<resources>
    <string name="app_name">Ducatus</string>
    <string name="app_description">A Budgeting and Financing Android Mobile Application with Subscription Management and Loan Monitoring</string>
    <string name="app_title">Personal Budget and Finance Manager</string>
    <string name="app_description_2">It is a mobile application that allows users to set their monthly expenses and their amount, assisting them in their financial transactions to reduce their unnecessary expenses, and set a given budget for a given time.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="generic_error">Something went wrong, please try again</string>
    <string name="session_expired">Session expired, please log-in again</string>
    <string name="email_empty">Enter your email</string>
    <string name="email_invalid">Enter a valid email</string>
    <string name="email_exists">Email is already taken</string>
    <string name="new_email_empty">Enter your new email</string>
    <string name="new_email_same">New email must not be the same as current email</string>
    <string name="username_empty">Enter your username</string>
    <string name="username_exists">Username is already taken</string>
    <string name="email_username_empty">Enter your email or username</string>
    <string name="user_does_not_exist">User does not exist</string>
    <string name="password_empty">Enter your password</string>
    <string name="password_invalid">Incorrect email or password</string>
    <string name="password_complexity">Password must be at least 8 characters</string>
    <string name="current_password_empty">Enter your current password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_empty">Confirm your password</string>
    <string name="new_password_empty">Enter your new password</string>
    <string name="confirm_new_password_empty">Confirm your new password</string>
    <string name="new_password_same">New password must not be the same as current password</string>
    <string name="password_match_error">Passwords do not match</string>
    <string name="verification_code_empty">Enter verification code</string>
    <string name="verification_code_error">Invalid code, please try again</string>
    <string name="mobile_number_empty">Enter your mobile number</string>
    <string name="mobile_number_invalid">Enter a valid mobile number</string>
    <string name="mobile_number_exists">Mobile number is already being used by another user</string>
    <string name="mobile_auth_request_error">Too many requests, please try again</string>
    <string name="unknown_error">Unknown error occurred, please try again</string>
    <string name="account_name_empty">Enter account name</string>
    <string name="account_name_exists">Account already exists</string>
    <string name="category_name_empty">Enter category name</string>
    <string name="category_name_exists">Category already exists</string>
    <string name="category_nature_empty">Select category nature</string>
    <string name="subcategory_name_empty">Enter category name</string>
    <string name="subcategory_name_exists">Subcategory already exists</string>
    <string name="budget_name_empty">Enter budget name</string>
    <string name="budget_name_exists">Budget name already exists</string>
    <string name="amount_empty">Enter amount</string>
    <string name="amount_starts_0">Amount must be greater than 0</string>
    <string name="amount_overflow">Amount must not be greater than the remaining budget</string>
    <string name="amount_overflow_2">Monthly budget is too low for your current expenses</string>
    <string name="categories_remaining_budget_empty">No categories found with remaining budget</string>
    <string name="category_empty">Select a category</string>
    <string name="subcategory_empty">Select a subcategory</string>
    <string name="payment_type_empty">Select a payment type</string>
    <string name="payment_type_empty_2">Enter a payment type</string>
    <string name="date_empty">Select a date</string>
    <string name="time_empty">Select a time</string>
    <string name="transaction_name_empty">Enter transaction name</string>
    <string name="subscription_name_empty">Enter subscription name</string>
    <string name="subscription_name_exists">Subscription already exists</string>
    <string name="frequency_empty">Select a frequency</string>
    <string name="notification_empty">Select a notification</string>
    <string name="loan_name_empty">Enter loan name</string>
    <string name="loan_name_exists">Loan already exists</string>
    <string name="goal_name_empty">Enter goal name</string>
    <string name="goal_name_exists">Goal already exists</string>
    <string name="target_amount_error">Target amount must be more than the saved amount</string>
    <string name="saved_amount_error">Saved amount must not be greater than the target amount</string>
    <string name="saved_amount_error_2">Saved amount must not be greater than the remaining amount</string>
    <string name="load_account_error">Could not load account</string>
    <string name="load_accounts_error">Could not load accounts</string>
    <string name="load_budgets_error">Could not load budgets</string>
    <string name="load_categories_error">Could not load categories</string>
    <string name="load_challenges_error">Could not load challenges</string>
    <string name="date_added_oldest">Date added (oldest)</string>
    <string name="date_added_newest">Date added (newest)</string>
    <string name="name_up">Name (A-Z)</string>
    <string name="name_down">Name (Z-A)</string>
    <string name="amount_highest">Amount (highest)</string>
    <string name="amount_lowest">Amount (lowest)</string>
    <string name="bullet">\u2022</string>
    <string name="privacy_policy_header_1">What information do you collect?</string>
    <string name="privacy_policy_header_1_description">We collect information that you voluntarily provide to us when you register in our app, when you use our app, or otherwise when you contact us.</string>
    <string name="privacy_policy_subheader_1">Personal Information Provided by You</string>
    <string name="privacy_policy_subheader_1_description">The personal information that we collect depends on the context of your interaction with the application, the choices you make, and the features you use. All personal information that you provide to us must be true, complete, and accurate. This may include the following:</string>
    <string name="privacy_policy_subheader_1_list">\u2022 Names\n\u2022 Phone numbers\n\u2022 Email addresses\n\u2022 Usernames\n\u2022 Passwords</string>
    <string name="toc_1_header">1. Introduction</string>
    <string name="toc_1_description_1">Welcome to <b>Ducatus!</b></string>
    <string name="toc_1_description_2"><b>Ducatus</b> operates a <b>budgeting and financing application with subscription management and loan monitoring</b> (hereinafter referred to as <b>"Service"</b></string>
    <string name="toc_1_description_3">Our <b>Privacy Policy</b> governs your usage of the <b>Ducatus Mobile Application</b>, and explains how we collect, safeguard, and disclose information that results from your use of our Service.</string>
    <string name="toc_1_description_4">We use your data to provide and improve Service. By using our application, you agree to the collection and use of information in accordance with this policy. Unless otherwise stated, the terms used in the policy have the same meaning as our Terms and Conditions.</string>
    <string name="toc_1_description_5">Our Terms and Conditions govern all use of our Service and together with the Privacy Policy constitutes your agreement with us.</string>
    <string name="toc_2_header">2. Definitions</string>
    <string name="toc_2_description_1"><b>SERVICE</b> means the Ducatus Mobile Application operated by Team Ducats.</string>
    <string name="toc_2_description_2"><b>OTP (One-Time Password)</b> is an automatically generated numeric code to verify and authenticate user access to the application or login session.</string>
    <string name="toc_2_description_3"><b>USER</b> is the individual using our Service. The User corresponds to the Data Subject, who is the subject of Personal Data.</string>
    <string name="toc_3_header">3. Information Collection and Use</string>
    <string name="toc_3_description_1">We collect several different types of information such as <b>Username, Email, Mobile Number (optional), Profile Image (optional)</b> for authentication purposes to provide and improve our Service to you.</string>
    <string name="toc_4_header">4. Types of Data Collected</string>
    <string name="toc_4_description_1">While using our Service, we may ask you to provide us with certain valid information that can be used to identify you. This identifiable information may include your:</string>
    <string name="toc_4_list_1">\u2022 Username\n\u2022 Email\n\u2022 Password\n\u2022 Mobile Number (optional)\n\u2022 Account Profile Photo (optional)</string>
    <string name="toc_4_description_2">We assure you that the information we gather will only be used for the purpose of this application, other than that, we will not use this information for different matters.</string>
    <string name="toc_5_header">5. OTP (One-Time Password)</string>
    <string name="toc_5_description_1">We may also collect your data regarding your mobile number wherein an OTP numeric code will be sent respectively for verification purposes.</string>
    <string name="toc_6_header">6. Security of Data</string>
    <string name="toc_6_description_1">The security of your data is crucial to us. However, no method of transmission over the Internet or method of electronic storage is 100% secure. While we strive to use commercially acceptable means to protect your Personal Data, we cannot guarantee its absolute security.</string>
    <string name="toc_7_header">7. Terms of Service</string>
    <string name="toc_7_description_1">Our goal is to help and assist users in relation with budgeting and financial management including but not limited to subscription management and loan monitoring.</string>
    <string name="toc_7_description_2">We also provide articles and videos that serve as tips for budgeting and financial management, which are validated by professionals.</string>
    <string name="toc_7_description_3">Daily Challenges and Savings Goal will be provided as well to allow users to save a certain amount and reach an achievable amount goal.</string>
    <string name="toc_8_header">8. Conditions</string>
    <string name="toc_8_description_1">An account must be created first in order to use the application.</string>
    <string name="toc_8_description_2">Multiple creation of accounts is allowed.</string>
    <string name="toc_8_description_3">The expenses reports can be downloaded in PDF format only.</string>
    <string name="toc_9_header">9. Contact Us</string>
    <string name="toc_9_description_1">If you have any questions about the Terms and Conditions, feel free to contact us by email at <b>teamducats@gmail.com</b>.</string>
    <string name="decline">decline</string>
    <string name="agree">I Agree</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="reports">Reports</string>
    <string name="budgets">Budgets</string>
    <string name="category">Category</string>
    <string name="transactions">Transactions</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="loans">Loans</string>
    <string name="goals">Goals</string>
    <string name="challenges">Challenges</string>
    <string name="tips">Tips</string>
    <string name="help">Help</string>
</resources>