<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    tools:context=".TermsOfServiceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!--        <TextView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:fontFamily="@font/inter_bold"-->
        <!--            android:text="@string/terms_and_conditions"-->
        <!--            android:textAlignment="center"-->
        <!--            android:textColor="@color/off_black"-->
        <!--            android:textSize="16sp" />-->

        <!--        <com.google.android.material.divider.MaterialDivider-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="16dp" />-->


        <!-- header 1 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/toc_1_header"
            android:textColor="@color/off_black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/toc_1_description_1"
            android:textColor="@color/off_black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/toc_1_description_2"
            android:textColor="@color/off_black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/toc_1_description_3"
            android:textColor="@color/off_black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/toc_1_description_4"
            android:textColor="@color/off_black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/toc_1_description_5"
            android:textColor="@color/off_black" />


        <!-- header 2 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/toc_2_header"
            android:textColor="@color/off_black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/toc_2_description_1"
            android:textColor="@color/off_black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/toc_2_description_2"
            android:textColor="@color/off_black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/toc_2_description_3"
            android:textColor="@color/off_black" />


        <!-- header 3 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/toc_3_header"
            android:textColor="@color/off_black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/toc_3_description_1"
            android:textColor="@color/off_black" />


        <!-- header 4 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/toc_4_header"
            android:textColor="@color/off_black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/toc_4_description_1"
            android:textColor="@color/off_black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/inter_medium"
            android:lineSpacingExtra="4dp"
            android:text="@string/toc_4_list_1"
            android:textColor="@color/off_black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/toc_4_description_2"
            android:textColor="@color/off_black" />


        <!-- header 5 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/toc_5_header"
            android:textColor="@color/off_black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/toc_5_description_1"
            android:textColor="@color/off_black" />


        <!-- header 6 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/toc_6_header"
            android:textColor="@color/off_black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/toc_6_description_1"
            android:textColor="@color/off_black" />


        <!-- header 7 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/toc_7_header"
            android:textColor="@color/off_black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/bullet"
                android:textColor="@color/off_black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="@string/toc_7_description_1"
                android:textColor="@color/off_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/bullet"
                android:textColor="@color/off_black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="@string/toc_7_description_2"
                android:textColor="@color/off_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/bullet"
                android:textColor="@color/off_black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="@string/toc_7_description_3"
                android:textColor="@color/off_black" />
        </LinearLayout>


        <!-- header 8 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/toc_8_header"
            android:textColor="@color/off_black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/bullet"
                android:textColor="@color/off_black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="@string/toc_8_description_1"
                android:textColor="@color/off_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/bullet"
                android:textColor="@color/off_black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="@string/toc_8_description_2"
                android:textColor="@color/off_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/bullet"
                android:textColor="@color/off_black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="@string/toc_8_description_3"
                android:textColor="@color/off_black" />
        </LinearLayout>


        <!-- header 9 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/toc_9_header"
            android:textColor="@color/off_black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/toc_9_description_1"
            android:textColor="@color/off_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnTOSDecline"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/decline"
                android:textColor="@color/green_primary" />

            <Button
                android:id="@+id/btnTOSAgree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/agree"
                android:textColor="@color/off_white"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>